// Copyright (c) .NET Foundation. All rights reserved.
// Licensed under the Apache License, Version 2.0. See License.txt in the project root for license information.

syntax = "proto3";

import "google/api/annotations.proto";

package count;

service Counter {
  rpc Add (CountRequest) returns (CountReply) {
    option (google.api.http) = {
      get: "/v1/add/{value1}/{value2}"
    };
  }
}

message CountRequest {
  int32 value1 = 1;
  int32 value2 = 2;
}

message CountReply {
  int32 result = 1;
}
