syntax = "proto3";

package params;

import "google/api/annotations.proto";

// HttpRule: https://cloud.google.com/endpoints/docs/grpc-service-config/reference/rpc/google.api#google.api.HttpRule

service Parameters {
  // parameter_int & parameter_string should be query parameters
  rpc DemoParametersOne (RequestOne) returns (Response) {
    option (google.api.http) = {
      get: "/v1/parameters1"
    };
  }

  // parameter_string should be query parameters
  rpc DemoParametersTwo (RequestOne) returns (Response) {
    option (google.api.http) = {
      get: "/v1/parameters2/{parameter_int}"
    };
  }

  // parameter_two & parameter_three should be query parameters
  rpc DemoParametersThree (RequestTwo) returns (Response) {
    option (google.api.http) = {
      post: "/v1/parameters3/{parameter_one}"
      body: "parameter_four"
    };
  }

  // no query parameters
  rpc DemoParametersFour (RequestTwo) returns (Response) {
    option (google.api.http) = {
      post: "/v1/parameters4/{parameter_two}"
      body: "*"
    };
  }
}

message RequestOne {
  int64 parameter_int = 1;
  string parameter_string = 2;
}

message RequestTwo {

  int64 parameter_one = 1;
  string parameter_two = 2;
  int64 parameter_three = 3;
  RequestBody parameter_four = 45;
}

message RequestBody {
  string request_body = 1 ;
}

message Response {
  string message = 1;
}